--- a/ami_webapp-1/src/main/resources/application.properties
+++ b/ami_webapp-1/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.resources.add-mappings=true
 
 server.servlet.context-path=/cloud
-
+#djdj
 cloud.aws.credentials.secret-key=${{secrets.AWS_SECRET_KEY}}
 cloud.aws.credentials.access-key=${{secrets.AWS_ACCESS_KEY}}
 cloud.aws.region.static=${{secrets.AWS_REGION}}
